# cnr_drapebot_tezcell

./: LICENSE  README.md
Rsi_project/: Rsi_project.sln
Rsi_project/Rsi_project/: RsiReaderWriter.sys  Rsi_project.tsproj.bak  TrialLicense.tclrs
tez_app/: CMakeLists.txt  README.md  package.xml  tez_app.kdev4
tez_app/.kdev4/: tez_app.kdev4
tez_app/config/: moveit.rviz  tez_configurations.yaml  topics_hw.yaml
tez_app/config/robot_1/: configurations.yaml  configurations_single_robot.yaml  mqtt_config.yaml  robot_hw.yaml
tez_app/config/robot_2/: configurations.yaml  mqtt_config.yaml  robot_hw.yaml
tez_app/launch/: cell_bringup.launch  cell_bringup_robot_1.launch  moveit_rviz.launch  mqtt_converter.launch  trjaectory_converters.launch
tez_app/script/: record_trajectory.py
tez_description/: CMakeLists.txt  package.xml  tez_description.kdev4
tez_description/.kdev4/: tez_description.kdev4
tez_description/launch/: tez_cell_boxes_visualization.launch  tez_cell_fullmesh_visualization.launch  tez_cell_reducedmesh_visualization.launch
tez_description/rviz/: tez_description.rviz  tez_workcell.rviz
tez_description/script/: tez_rsi_simulator.py
tez_description/test/: test.launch
tez_description/urdf/: kuka_kr210_r3100_macro.xacro  tez_cell.xacro  tez_cell_boxes.urdf  tez_cell_fullmesh.urdf  tez_cell_fullmesh_.urdf  tez_cell_reducedmesh.urdf
tez_moveit/: CMakeLists.txt  package.xml  tez_moveit.kdev4
tez_moveit/.kdev4/: tez_moveit.kdev4
tez_moveit/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  tez_cell.srdf  (+1 more)
(+101 files in other folders)
