<?xml version="1.0"?>
<package format="2">
  <name>tez_app</name>
  <version>0.0.0</version>
  <description>The tez_app package</description>

  <maintainer email="marie@todo.todo">marie</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
 
  <depend>ur10_bringup</depend>
  <depend>rospy</depend>

  <depend>moveit_commander</depend>
  <depend>moveit_msgs</depend>
  <depend>geometry_msgs.msg</depend>
  <depend>tf_transformations   </depend>
  <depend>actionlib</depend>
  <depend>simple_touch_controller_msgs</depend>
  <depend>configuration_msgs</depend>




  <export>
  </export>
</package>
